2006-05-23  John W. Eaton  <jwe@octave.org>

	* plot/mesh.m: Use __gnupot_raw__ except where __gnuplot_set__ is
	really needed.

2006-05-22  John W. Eaton  <jwe@octave.org>

	* scripts/general/lookup.m: New file from Octave Forge.

2006-05-22  David Bateman  <dbateman@free.fr>

	* scripts/general/nthroot.m, scripts/linear-algebra/rref.m,
	scripts/specfun/isprime.m, scripts/specfun/primes.m,
	scripts/specfun/factor.m, scripts/specfun/nchoosek.m,
	scripts/specfun/legendre.m, scripts/specfun/perms.m,
	scripts/special-matrix/rosser.m,
	scripts/special-matrix/wilkinson.m,
	scripts/special-matrix/pascal.m, scripts/special-matrix/magic.m,
	scripts/special-matrix/hadamard.m, scripts/strings/strtok.m:
	New files from Octave Forge.

2006-05-19  David Bateman  <dbateman@free.fr>

	* polynomial/unmkpp.m, polynomial/mkpp.m, polynomial/spline.m,
	polynomial/ppval.m, set/setxor.m: New files from Octave Forge.

2006-05-17  John W. Eaton  <jwe@octave.org>

	* set/intersection.m: Delete
	* deprecated/intersection.m: New file.

2006-05-17  David Bateman  <dbateman@free.fr>

	* general/cplxpair.m, general/trapz.m, general/cumtrapz.m,
	general/isdir.m, miscellaneous/dos.m, miscellaneous/getfield.m,
	miscellaneous/setfield.m, plot/fplot.m, set/intersect.m,
	signal/ifftshift.m, signal/filter2.m, specfun/betaln.m,
	specfun/factorial.m, strings/strvcat.m: New files from Octave
	Forge.

2006-05-11  John W. Eaton  <jwe@octave.org>

	* path/path.m: Delete (now a built-in function).

	* pkg/Makefile.in: New file.
	* configure.in (AC_CONFIG_FILES): Add pkg/Makefile to the list.
	* Makefile.in (SUBDIRS): Add pkg to the list.

2006-05-10  John W. Eaton  <jwe@octave.org>

	* tar.m, untar.m, unzip.m: Adapt to Octave coding style.
	* tar.m, untar.m: Only tar; don't compress or uncompress.

2006-05-10  Soren Hauberg  <hauberg@gmail.com>

	* tar.m, untar.m, unzip.m: New files.

2006-05-10  John W. Eaton  <jwe@octave.org>

	* path/addpath.m, path/rmpath.m: Improve compatibility.